feat: setup Next dev server and examples

--- a/package.json
+++ b/package.json
@@ -3,31 +3,43 @@
   "version": "0.1.0",
   "description": "An engine for reverse engineering data visualizations from the DOM.",
   "main": "index.js",
-  "contributors": [{
-    "name": "Parker Ziegler",
-    "email": "peziegler@berkeley.edu",
-    "url": "https://parkie-doo.sh/"
-   }, {
-     "name": "Logan Caraco",
-     "email": "logan_caraco@berkeley.edu"
-   }],
+  "contributors": [
+    {
+      "name": "Parker Ziegler",
+      "email": "peziegler@berkeley.edu",
+      "url": "https://parkie-doo.sh/"
+    },
+    {
+      "name": "Logan Caraco",
+      "email": "logan_caraco@berkeley.edu"
+    }
+  ],
   "license": "MIT",
   "scripts": {
-    "build": "check:ts && esbuild src/index.ts --bundle --outdir=www/js",
+    "build": "yarn check:ts && esbuild src/index.ts --bundle --outdir=dist",
     "check:ts": "tsc --noEmit",
-    "dev": "esbuild src/index.ts --bundle --outdir=www/js --servedir=www",
+    "dev": "next dev",
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {},
   "devDependencies": {
+    "@observablehq/plot": "^0.2.9",
+    "@types/d3": "^7.1.0",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "d3": "^7.1.1",
     "esbuild": "^0.13.8",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
+    "next": "^12.0.1",
     "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.4.4"
   },
   "prettier": {
