updated to format json too

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "yarn check:ts && esbuild src/index.ts --bundle --outdir=dist",
     "check:ts": "tsc --noEmit",
     "dev": "next dev",
-    "format": "prettier --write src/**/*.ts",
+    "format": "prettier --write **/*{.ts,.tsx} **/*.json",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {},
