--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "format": "prettier --write **/*.{ts,tsx} **/*.json",
     "lint": "eslint . --ext .ts,.tsx"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.groupby": "^4.6.0",
+    "lodash.overevery": "^4.7.0"
+  },
   "devDependencies": {
     "@observablehq/plot": "^0.2.9",
     "@types/d3": "^7.1.0",
+    "@types/lodash.groupby": "^4.6.6",
+    "@types/lodash.overevery": "^4.7.6",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
