--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
     "d3": "^7.1.1",
+    "lodash.camelcase": "^4.3.0",
     "lodash.groupby": "^4.6.0",
+    "lodash.isplainobject": "^4.0.6",
     "lodash.overevery": "^4.7.0"
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.groupby": "^4.6.6",
+    "@types/lodash.isplainobject": "^4.0.6",
     "@types/lodash.overevery": "^4.7.6",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
@@ -44,6 +48,16 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "overrides": [
+      {
+        "files": [
+          "**/*.css"
+        ],
+        "options": {
+          "singleQuote": false
+        }
+      }
+    ]
   }
 }
