--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
     "next": "12.0.3",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
