--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
+    "classnames": "^2.3.1",
     "next": "12.0.3",
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
