--- a/docs/package.json
+++ b/docs/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
     "classnames": "^2.3.1",
+    "d3": "^7.1.1",
     "next": "12.0.3",
+    "prettier": "^2.5.0",
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
