--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "docs",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
+    "@parkerziegler/reviz": "^0.1.0",
     "classnames": "^2.3.1",
     "d3": "^7.1.1",
     "next": "12.0.3",
