--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
-node_modules
+# Build
 dist
+
+# System
 .DS_Store
+
+# Node
+node_modules
+
+# Editor
 .vscode
+
+# Next
 .next
+
+# TypeScript
 tsconfig.tsbuildinfo
+
+# Jest
+coverage
 
 # Latex
 *.aux
