--- a/docs/package.json
+++ b/docs/package.json
@@ -4,15 +4,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@observablehq/plot": "^0.2.9",
-    "@parkerziegler/reviz": "^0.1.0",
+    "@parkerziegler/reviz": "^0.1.2",
     "classnames": "^2.3.1",
     "d3": "^7.1.1",
-    "next": "12.0.3",
+    "next": "^12.0.7",
     "prettier": "^2.5.0",
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
@@ -22,8 +21,11 @@
     "@types/d3": "^7.1.0",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "autoprefixer": "^10.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.9",
     "typescript": "4.4.4"
   }
 }
