--- a/docs/package.json
+++ b/docs/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@observablehq/plot": "^0.2.9",
+    "@observablehq/plot": "^0.3.2",
     "@parkerziegler/reviz": "^0.1.2",
     "classnames": "^2.3.1",
     "d3": "^7.1.1",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.9",
     "typescript": "4.4.4"
