fix: mark reviz as side effect free to support tree shaking

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/reviz.js",
   "module": "dist/reviz.esm.js",
   "types": "dist/types/index.d.ts",
+  "sideEffects": false,
   "contributors": [
     {
       "name": "Parker Ziegler",
