--- a/docs/package.json
+++ b/docs/package.json
@@ -12,14 +12,17 @@
     "@parkerziegler/reviz": "^0.2.0",
     "classnames": "^2.3.1",
     "d3": "^7.1.1",
+    "lodash.groupby": "^4.6.0",
     "next": "^12.0.7",
     "prettier": "^2.5.0",
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/lodash.groupby": "^4.6.6",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "autoprefixer": "^10.4.1",
