--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@parkerziegler/reviz",
+  "name": "@plait-lab/reviz",
   "version": "0.2.0",
   "description": "An engine for reverse engineering data visualizations from the DOM.",
   "main": "dist/reviz.js",
