--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@observablehq/plot": "^0.3.2",
-    "@parkerziegler/reviz": "^0.2.0",
+    "@plait-lab/reviz": "^0.3.0",
     "classnames": "^2.3.1",
     "d3": "^7.1.1",
     "lodash.groupby": "^4.6.0",
