--- a/package.json
+++ b/package.json
@@ -102,6 +102,9 @@
     "moduleNameMapper": {
       "@observablehq/plot": "<rootDir>/node_modules/@observablehq/plot/dist/plot.umd.min.js",
       "d3": "<rootDir>/node_modules/d3/dist/d3.min.js"
-    }
+    },
+    "testMatch": [
+      "**/__tests__/**/*.spec.ts"
+    ]
   }
 }
