--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["src/**/*"],
+  "include": ["src/*"],
   "exclude": ["node_modules"]
 }
