feat: add content script to enable selection of DOM nodes

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,5 +6,16 @@
   "devtools_page": "devtools.html",
   "action": {
     "default_icon": "reviz.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://*/*",
+        "http://*/*"
+      ],
+      "js": [
+        "inspect.js"
+      ]
+    }
+  ]
 }
