feat: add service worker to enable message passing between content script and DevTools panel

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,7 +15,13 @@
       ],
       "js": [
         "inspect.js"
+      ],
+      "css": [
+        "inspect.css"
       ]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "service-worker.js"
+  }
 }
