--- a/extension/package.json
+++ b/extension/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && cp manifest.json public/reviz.png dist",
+    "build": "tsc && vite build && cp manifest.json public/reviz.png scripts/inspect.css dist",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
