feat: add a visualizer for visualization attributes

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,16 +9,9 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ],
-      "js": [
-        "inspect.js"
-      ],
-      "css": [
-        "inspect.css"
-      ]
+      "matches": ["https://*/*", "http://*/*"],
+      "js": ["inspect.js"],
+      "css": ["inspect.css"]
     }
   ],
   "background": {
