--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,9 +9,16 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*"],
-      "js": ["inspect.js"],
-      "css": ["inspect.css"]
+      "matches": [
+        "https://*/*",
+        "http://*/*"
+      ],
+      "js": [
+        "inspect.js"
+      ],
+      "css": [
+        "inspect.css"
+      ]
     }
   ],
   "background": {
