--- a/extension/package.json
+++ b/extension/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@plait-lab/reviz": "^0.4.1",
     "classnames": "^2.3.2",
+    "prettier": "^2.8.8",
+    "prism-react-renderer": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -28,7 +30,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
