--- a/.prettierrc
+++ b/.prettierrc
@@ -3,10 +3,15 @@
   "trailingComma": "es5",
   "overrides": [
     {
-      "files": ["**/*.css"],
+      "files": [
+        "**/*.css"
+      ],
       "options": {
         "singleQuote": false
       }
     }
+  ],
+  "plugins": [
+    "prettier-plugin-tailwindcss"
   ]
 }
