--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -2,28 +2,18 @@
   "name": "@reviz/compiler",
   "version": "0.4.1",
   "description": "An engine for reverse engineering data visualizations from the DOM.",
+  "author": "Parker Ziegler <peziegler@cs.berkeley.edu>",
   "main": "dist/reviz.js",
   "module": "dist/reviz.esm.js",
-  "types": "dist/types/src/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "sideEffects": false,
-  "contributors": [
-    {
-      "name": "Parker Ziegler",
-      "email": "peziegler@berkeley.edu",
-      "url": "https://parkie-doo.sh/"
-    },
-    {
-      "name": "Logan Caraco",
-      "email": "logan_caraco@berkeley.edu"
-    }
-  ],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/parkerziegler/reviz.git"
   },
   "bugs": "https://github.com/parkerziegler/reviz/issues",
-  "homepage": "https://github.com/parkerziegler/reviz#readme",
+  "homepage": "https://reviz.vercel.app",
   "keywords": [
     "data visualization",
     "reverse engineering",
@@ -32,7 +22,7 @@
     "typescript"
   ],
   "scripts": {
-    "build": "yarn check:ts && yarn emit:types && yarn build:esm:dev && yarn build:esm:prod && yarn build:cjs:dev && yarn build:cjs:prod",
+    "build": "npm run check:ts && npm run emit:types && npm run build:esm:dev && npm run build:esm:prod && npm run build:cjs:dev && npm run build:cjs:prod",
     "build:esm:dev": "esbuild src/index.ts --bundle --sourcemap --format=esm --outfile=dist/reviz.esm.js",
     "build:esm:prod": "esbuild src/index.ts --bundle --minify --format=esm --outfile=dist/reviz.esm.min.js",
     "build:cjs:dev": "esbuild src/index.ts --bundle --sourcemap --format=cjs --outfile=dist/reviz.js",
@@ -41,7 +31,7 @@
     "clean": "rimraf ./dist ./node_modules/.cache",
     "coverage": "jest --collectCoverage",
     "emit:types": "tsc --declaration --emitDeclarationOnly --outDir dist/types",
-    "preversion": "yarn clean && yarn check:ts && yarn build",
+    "preversion": "npm run clean && npm run check:ts && npm run build",
     "test": "jest"
   },
   "files": [
@@ -60,29 +50,24 @@
     "@observablehq/plot": "^0.6.9",
     "@sucrase/jest-plugin": "^2.2.0",
     "@types/jest": "^27.0.3",
-    "@types/lodash.camelcase": "^4.3.6",
+    "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.chunk": "^4.2.7",
-    "@types/lodash.groupby": "^4.6.6",
-    "@types/lodash.orderby": "^4.6.6",
-    "@types/node": "^16.11.6",
-    "esbuild": "^0.13.8",
+    "@types/lodash.groupby": "^4.6.7",
+    "@types/lodash.orderby": "^4.6.7",
+    "@types/node": "^18.16.1",
+    "esbuild": "^0.18.11",
     "jest": "^27.4.5",
     "lodash.chunk": "^4.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^5.1.3"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-typescript"
-    ]
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "transform": {
       "^.+\\.tsx?$": "@sucrase/jest-plugin"
     },
     "moduleNameMapper": {
-      "@observablehq/plot": "<rootDir>/node_modules/@observablehq/plot/dist/plot.umd.min.js",
-      "d3": "<rootDir>/node_modules/d3/dist/d3.min.js"
+      "@observablehq/plot": "<rootDir>/../../node_modules/@observablehq/plot/dist/plot.umd.min.js",
+      "d3": "<rootDir>/../../node_modules/d3/dist/d3.min.js"
     },
     "testMatch": [
       "<rootDir>/__tests__/*.spec.ts"
@@ -90,8 +75,5 @@
     "collectCoverageFrom": [
       "src/**/*.ts"
     ]
-  },
-  "workspaces": [
-    "packages/docs"
-  ]
+  }
 }
