--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -2,7 +2,23 @@
   "name": "@reviz/extension",
   "private": true,
   "version": "0.4.1",
+  "description": "The Chrome extension for reviz, an engine for reverse engineering data visualizations from the DOM.",
+  "author": "Parker Ziegler <peziegler@berkeley.edu>",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parkerziegler/reviz.git"
+  },
+  "bugs": "https://github.com/parkerziegler/reviz/issues",
+  "homepage": "https://reviz.vercel.app",
+  "keywords": [
+    "chrome extension",
+    "data visualization",
+    "reverse engineering",
+    "observable",
+    "observable plot",
+    "typescript"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && cp manifest.json public/reviz.png scripts/inspect.css dist",
@@ -11,11 +27,10 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.1.9",
     "@observablehq/plot": "^0.6.9",
-    "@plait-lab/reviz": "^0.4.1",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reviz/compiler": "^0.4.1",
     "@reviz/ui": "^0.4.1",
-    "@tanstack/react-table": "^8.9.2",
+    "@tanstack/react-table": "^8.9.3",
     "classnames": "^2.3.2",
     "codemirror": "^6.0.1",
     "d3-dsv": "^3.0.1",
@@ -24,15 +39,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.237",
+    "@types/chrome": "^0.0.239",
     "@types/d3-dsv": "^3.0.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9"
   }
 }
