--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Parker Ziegler",
     "email": "peziegler@cs.berkeley.edu"
   },
+  "license": "MIT",
   "homepage": "https://github.com/parkerziegler/reviz#readme",
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "scripts": {
+    "build": "lerna run build",
     "format": "prettier --write .",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix"
