docs: add READMEs and CHANGELOGs to individual packages

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@reviz/docs",
+  "name": "@reviz/examples",
   "private": true,
   "version": "0.4.1",
-  "description": "Documentation for reviz, an engine for reverse engineering data visualizations from the DOM.",
+  "description": "Examples for reviz, an engine for reverse engineering data visualizations from the DOM.",
   "author": {
     "name": "Parker Ziegler",
     "email": "peziegler@cs.berkeley.edu"
