--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-node_modules
-.next
-coverage
+# Build
 dist
+
+# System
 .DS_Store
+
+# Node
+node_modules
+
+# Editor
+.vscode
+
+# Next
+.next
+
+# TypeScript
 tsconfig.tsbuildinfo
+
+# Jest
+coverage
+
+# Latex
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
+
+# Logs
+npm-debug.log*
+lerna-debug.log*
