--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -20,6 +20,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts", "next.config.js"],
   "exclude": ["node_modules"]
 }
