--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -3,21 +3,30 @@
   "name": "reviz",
   "description": "Adds tools for reverse engineering data visualizations to Chrome Developer tools.",
   "version": "0.4.1",
-  "devtools_page": "devtools.html",
+  "devtools_page": "devtools/devtools.html",
   "action": {
     "default_icon": "reviz.png"
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*"],
-      "js": ["inspect.js"],
-      "css": ["inspect.css"]
+      "matches": [
+        "https://*/*",
+        "http://*/*"
+      ],
+      "js": [
+        "inspect.js"
+      ],
+      "css": [
+        "inspect.css"
+      ]
     }
   ],
   "background": {
     "service_worker": "service-worker.js"
   },
   "sandbox": {
-    "pages": ["sandbox.html"]
+    "pages": [
+      "sandbox/sandbox.html"
+    ]
   }
 }
