--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -16,6 +16,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "scripts"],
+  "include": ["src", "scripts", "devtools", "sandbox"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
