--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -9,24 +9,15 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ],
-      "js": [
-        "inspect.js"
-      ],
-      "css": [
-        "inspect.css"
-      ]
+      "matches": ["https://*/*", "http://*/*"],
+      "js": ["inspect.js"],
+      "css": ["inspect.css"]
     }
   ],
   "background": {
     "service_worker": "service-worker.js"
   },
   "sandbox": {
-    "pages": [
-      "sandbox/sandbox.html"
-    ]
+    "pages": ["sandbox/sandbox.html"]
   }
 }
