Migrate back to yarn to accommodate Vercel restrictions.

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,13 @@ coverage
 *.synctex.gz
 
 # Logs
-npm-debug.log*
 lerna-debug.log*
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
