--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
     "format": "prettier --write .",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
