fix: add lerna version and publish commands to root package.json

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "build": "lerna run build",
     "format": "prettier --write .",
     "lint": "eslint --ext .ts,.tsx .",
-    "lint:fix": "eslint --ext .ts,.tsx . --fix"
+    "lint:fix": "eslint --ext .ts,.tsx . --fix",
+    "publish": "lerna publish --no-private --npm-client-args='--access public'",
+    "version": "lerna version"
   },
   "packageManager": "yarn@1.22.19"
 }
