--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -31,6 +31,7 @@
     "@codemirror/lang-javascript": "^6.1.9",
     "@observablehq/plot": "^0.6.9",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@reviz/compiler": "^0.5.0",
     "@reviz/ui": "^0.5.0",
     "@tanstack/react-table": "^8.9.3",
