--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -54,14 +54,15 @@
   "devDependencies": {
     "@observablehq/plot": "^0.6.9",
     "@sucrase/jest-plugin": "^3.0.0",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.5.12",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.chunk": "^4.2.7",
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.orderby": "^4.6.7",
     "@types/node": "^18.16.1",
     "esbuild": "^0.19.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash.chunk": "^4.2.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
