--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -33,7 +33,7 @@
     "classnames": "^2.3.2",
     "d3": "^7.8.4",
     "lodash.groupby": "^4.6.0",
-    "next": "^13.4.7",
+    "next": "^14.1.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +43,8 @@
     "@types/d3": "^7.4.0",
     "@types/lodash.groupby": "^4.6.7",
     "@types/node": "^18.16.1",
-    "@types/react": "^18.2.14",
+    "@types/react": "^18.2.62",
+    "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
