--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -29,6 +29,9 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/view": "^6.25.1",
+    "@lezer/highlight": "^1.2.0",
     "@observablehq/plot": "^0.6.9",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
